--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "start": "vite build && vite preview"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
