--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite build && node ./server.js",
-    "build": "vite build",
     "dev": "vite",
+    "prebuild": "tsc --noEmit",
+    "build": "npm run prebuild && vite build",
+    "start": "vite build && node ./server.js",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "stylelint": "^16.8.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   },
