--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
+    "nanoid": "^5.0.7",
     "vite-plugin-handlebars": "^2.0.0"
   },
   "engines": {
