--- a/sandbox-block/package.json
+++ b/sandbox-block/package.json
@@ -13,6 +13,7 @@
     "vite-plugin-handlebars": "^2.0.0"
   },
   "dependencies": {
+    "handlebars": "^4.7.8",
     "lodash-es": "^4.17.21"
   }
 }
