--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
@@ -18,12 +19,13 @@
     "eslint-plugin-import": "^2.29.1",
     "stylelint": "^16.8.2",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.4.10"
   },
   "dependencies": {
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
     "nanoid": "^5.0.7",
+    "uuid": "^10.0.0",
     "vite-plugin-handlebars": "^2.0.0"
   },
   "engines": {
